# roobs-kitchen-rs

./: Cargo.toml  README.md
src/: main.rs
src/types/: email.rs  mod.rs  password.rs
src/types/type_errors/: email_error.rs  mod.rs  password_error.rs
src/types/type_traits/: email_traits.rs  mod.rs  password_traits.rs
